syntax = "proto3";

import "DetectionMessage.proto";
import "Empty.proto";

package proto;

service FrontEndService {
  rpc onDetection(DetectionMessage) returns (Empty) {}
}
